[gd_scene load_steps=4 format=3 uid="uid://xejgaqbudtn1"]

[ext_resource type="PackedScene" uid="uid://b3imda8g3dp16" path="res://scenes/Items/item_carga.tscn" id="1_piavd"]
[ext_resource type="Script" path="res://res/scripts/control.gd" id="1_qaeus"]
[ext_resource type="PackedScene" uid="uid://ddkc207msyt1g" path="res://scenes/Items/item_varilla.tscn" id="3_dexg2"]

[node name="Item_Select" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_qaeus")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_right = 353.0
offset_bottom = 184.0
current_tab = 0

[node name="Cuerpos_2D" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Cuerpos_2D"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Cuerpos_2D/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Cuerpos_2D/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="item_carga" parent="TabContainer/Cuerpos_2D/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_piavd")]
layout_mode = 2

[node name="item_varilla" parent="TabContainer/Cuerpos_2D/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_dexg2")]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="mouse_entered" from="TabContainer" to="." method="_on_tab_container_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer" to="." method="_on_tab_container_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/Cuerpos_2D" to="." method="_on_cuerpos_2d_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/Cuerpos_2D" to="." method="_on_cuerpos_2d_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/Cuerpos_2D/ScrollContainer/VBoxContainer/HBoxContainer" to="." method="_on_h_box_container_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/Cuerpos_2D/ScrollContainer/VBoxContainer/HBoxContainer" to="." method="_on_h_box_container_mouse_exited"]
